hphp/test/zend/good/Zend/tests/error_reporting04.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: var' in %s/error_reporting04.php:10
Stack trace:
%A
